@@ -1,3 +1,4 @@
+* Prevent deletion of non-pending inspections
 
 Version 7.2.0 - 2024-04-29
 --------------------------
